<resources>
    <string name="app_name">Study Buddy</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">866283157164152</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb866283157164152</string>
    <string name="googleSignIn">Google Sign in</string>
    <!-- ListView title -->
    <string name="libraries">Libraries</string>
    <!-- Navigation components -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cloud_study">Cloud Study</string>
    <string name="profile_img">IMAGE</string>
    <!-- Navigation fragments -->
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="your_profile">Your profile</string>
    <string name="study_tools">Study tools</string>
    <string name="checkout">Checkout</string>
    <string name="communicate">Communicate</string>
    <string name="log_out">Log out</string>
    <!-- Fragment Checkout texts; current location and address are hardcoded for now -->
    <string name="text_label">Your are currently at:</string>
    <string name="current_location">Central Branch</string>
    <string name="address">350 W Georgia St, Vancouver, BC V6B 6B1</string>
    <string name="btn_check_out">Check out</string>
    <!-- Profile components-->
    <string name="greetings">Hey [username]!</string>
    <string name="phone_text_view">Your Phone Number</string>
    <string name="school_text_view">Your School</string>
    <string name="major_text_view">Your Major</string>
    <string name="email_place_holder">email@gmail.com</string>
    <string name="profile_update_btn">Update Profile</string>
    <string name="email_text_view">Your Email</string>
    <!-- Fragment Notification texts; requests are hardcoded for now -->
    <string name="label_notifications">Notifications</string>
    <string name="label_requests_received">Requests Received</string>
    <string name="label_from">From:</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <!-- activity_checkin text -->
    <string name="btn_check_in">Check in</string>
    <!-- activity_after_checkingin text -->
    <string name="label_your_potential_study_buddy">Your Potential Study Buddy</string>
</resources>
