<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/greet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="40dp"
        android:text="@string/greetings"
        android:textSize="16pt" />

    <TextView
        android:id="@+id/your_email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/email_text_view" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/email_place_holder"/>

    <TextView
        android:id="@+id/phone_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/phone_text_view" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/school_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/school_text_view"
        android:paddingTop="20dp"/>

    <Spinner
        android:id="@+id/school_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/major_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/major_text_view"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/major_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/profile_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnColor"
        android:text="@string/profile_update_btn"
        android:textColor="@android:color/white" />

</LinearLayout>
